--- a/501ProjectTest/src/main/resources/templates/writeForm5.html
+++ b/501ProjectTest/src/main/resources/templates/writeForm5.html
@@ -28,7 +28,7 @@ form {
 		<h1>재능 등록</h1>
 		<form action="/write" method="post" name="frm">
 	<!-- 임시 아이디 설정 PK라 INSERT시 MEMBER 테이블에 ID가 존재해야함 -->
-	<input type="hidden" name="SELLER_ID" value="gi1834">
+	<input type="hidden" name="SELLER_ID" value="als123">
 	<div class="category">
 		<h4>카테고리</h4>
 		<p>강의하실 분야를 선택해 주세요.</p>
@@ -101,22 +101,47 @@ form {
 				<img id="imagePreview" src="/image/jpandaMainImageLabel.jpg" onclick="document.getElementById('chooseFile').click();" width="auto" height="250" />
 				
 				<!-- 파일 선택을 위한 input 태그 (display:none으로 숨겨줍니다.) -->
-				<input name="MAIN_IMG" type="file" id="chooseFile" accept="image/*" style="display:none;" />
+				<input type="file" id="chooseFile" accept="image/*" style="display:none;" />
 				
+				<!-- 메인 이미지 서버 업로드 경로 -->
+				<input type="hidden" id="imageChanged" name="MAIN_IMG">
 				<script>
-				 // 파일 선택 후 미리보기 기능 구현
-				  document.getElementById('chooseFile').addEventListener('change', function() {
-				    var reader = new FileReader();
+				// 파일 선택 후 미리보기 기능 구현
+				document.getElementById('chooseFile').addEventListener('change', function() {
+					var reader = new FileReader();
 				    reader.onload = function(e) {
-				      document.getElementById('imagePreview').src = e.target.result;
-				      // 이미지 변경 여부 체크
-				      document.getElementById('imageChanged').value = "true";
+				      	document.getElementById('imagePreview').src = e.target.result;
+				      	// 이미지 변경 여부 체크
 				    }
 				    reader.readAsDataURL(this.files[0]);
-				  });
-				  
+				    
+				    // 파일 업로드
+				    $.ajax({
+				        url: '/mainImage/upload',
+				        type: 'POST',
+				        data: formData,
+				        dataType: 'text',
+				        processData: false,
+				        contentType: false,
+				        success: function(data) {
+				            // 서버에서 리턴한 데이터 가공
+				            var url = data.url;
+				            var uploaded = data.uploaded;
+				            
+				            if (uploaded) {
+				                // 업로드 완료 시 input의 값을 변경
+				                $('#imageChanged').val(url);
+				            } else {
+				                alert('이미지 업로드에 실패했습니다.');
+				            }
+				        },
+				        error: function() {
+				            alert('이미지 업로드에 실패했습니다.');
+				        }
+				    });
+				});
+				
 				</script>
-				<input type="hidden" id="imageChanged" name="imageChanged" value="false" />
 		</div>
 		<div class="title">
 			<h4>제목</h4>
@@ -143,7 +168,6 @@ form {
 				console.error(error);
 			});
 	</script>
-			<button type="button" class="resetButton context">다시 작성</button>
 		<div class="bamboo">
 			<h4>가격</h4>
 			<p>정상 가격과 할인된 금액을 입력해 주세요.</p>
