--- a/501ProjectTest/src/main/resources/templates/writeForm5.html
+++ b/501ProjectTest/src/main/resources/templates/writeForm5.html
@@ -7,27 +7,49 @@
 <!-- CKEditor5 사용 -->
 <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
-<style>
-.ck.ck-editor {
-	width: 80%;
-	max-width: 800px;
-	margin: 0 auto;
-}
-
-.ck-editor__editable {
-	height: 80vh;
-}
-
-form {
-	text-align: center;
-}
-</style>	
+<link href="/css/board.css" rel="stylesheet" type="text/css">
+	
 </head>
 <body>
+<script>
+	function check(){
+		var alertText = '';
+		var count = 0;
+		if($('#category1').val() == null || $('#category2').val() == null){
+			alertText += '카테고리';
+			count++;
+		}else if($('#imageChanged').val() == null || $('#imageChanged').val() == ''){
+			alertText += '대표이미지';
+			count++;
+		
+		}else if($('#title').val() == null){
+			alertText += '제목';
+			count++;
+		
+		}else if($('#CONTENT').val() == null){
+			alertText += '상세 정보';
+			count++;
+		
+		}else if($('#SALE_BAMBOO').val() == null || $('BAMBOO').val() == null){
+			alertText += '가격';
+			count++;
+		
+		}else if($('#summary').val() == null){
+			alertText += '요약설명';
+			count++;
+		}	alertText += '을 입력해 주세요.';
+		if(count > 0 ) {
+			alert(alertText);
+			return false;
+		}else if(count == 0) {
+			return true;
+		}
+	}
+</script>
 	<div class="container">
+		<form action="/write" method="post" name="frm" onsubmit="check()">
 		<h1>재능 등록</h1>
-		<form action="/write" method="post" name="frm">
+		<hr>
 	<!-- 임시 아이디 설정 PK라 INSERT시 MEMBER 테이블에 ID가 존재해야함 -->
 	<input type="hidden" name="SELLER_ID" value="ftcxbgksj5p">
 	<div class="category">
@@ -51,43 +73,56 @@ form {
 		  
 		 	// select 요소를 가져온다
 		 	// 상위 카테고리 변수 선언
-		 	var selectElement = document.getElementById("category1");
+		 	// var selectElement = document.getElementById("category1");
+		 	var selectElement = $('#category1')[0];
 		  
 		  	// 카테고리 리스트를 순회하면서 option 요소를 동적으로 생성한다
 		  	// categoryList에서 상위 카테고리 값이 없는 카테고리만 상위 카테고리 옵션 추가
 		  	categoryList.forEach(function(category) {
 		    	if(category.upper_category_no === null) {
 		    		// 새로운 <option> 요소를 만듦
-		      		var optionElement = document.createElement("option");
+		      		//var optionElement = document.createElement("option");
 		    		// value를 category.category_no로 설정
-		      		optionElement.value = category.category_no;
+		      		//optionElement.value = category.category_no;
 		    		// 출력할 text를 item로 설정
-		      		optionElement.text = category.item;
+		      		//optionElement.text = category.item;
 		    		// 만들어진 <option> 요소를 상위 카테고리에 추가
-		      		selectElement.appendChild(optionElement);
+		      		// selectElement.appendChild(optionElement);
+		      		$('#category1').append($("<option>")
+		                     .val(category.category_no)
+		                     .text(category.item));
 		    	}
 		 	});
 		  
 		  	// select 요소에 change 이벤트 리스너를 추가한다
 		  	// 상위 카테고리가 변경되면
-			selectElement.addEventListener("change", function() {
+			// selectElement.addEventListener("change", function() {
+			$('#category1').on("change", function() {
 				// 상위 카테고리의 값 category.category_no을 가져온다
 		  		var selectedCategoryNo = parseInt(this.value);
 				// 하위 카테고리 변수 선언
-		    	var category2SelectElement = document.getElementById("category2");
+		    	// var category2SelectElement = document.getElementById("category2");
+		    	var category2SelectElement = $('#category2')[0];
 				// 하위 카테고리 초기화
-		    	category2SelectElement.innerHTML = "";
+		    	// category2SelectElement.innerHTML = "";
+		    	$('#category2').html('');
 		    	// categoryList에서 상위 카테고리 값이 선택한 상위 카테고리 값과 같은 카테고리만 하위 카테고리 옵션 추가
 		    	categoryList.forEach(function(category) {
 		      	if (category.upper_category_no === selectedCategoryNo) {
 		      	// 새로운 <option> 요소를 만듦
-		        	var optionElement = document.createElement("option");
+		        	//var optionElement = document.createElement("option");
 		        	// value를 category.category_no로 설정
-		        	optionElement.value = category.category_no;
+		        	//optionElement.value = category.category_no;
 		        	// 출력할 text를 item로 설정
-		        	optionElement.text = category.item;
+		        	//optionElement.text = category.item;
 		        	// 만들어진 <option> 요소를 하위 카테고리에 추가
-		        	category2SelectElement.appendChild(optionElement);
+		        	/* var optionElement = $("<option>")
+                     .val(category.category_no)
+                     .text(category.item); */
+		        	//category2SelectElement.appendChild(optionElement);
+		        	$('#category2').append($("<option>")
+		                     .val(category.category_no)
+		                     .text(category.item));
 		      	}
 		   		});
 		  	});
@@ -108,21 +143,22 @@ form {
 				<input type="hidden" id="imageChanged" name="MAIN_IMG" >
 				<script>
 				// 파일 선택 후 미리보기 기능 구현
-				document.getElementById('chooseFile').addEventListener('change', function() {
+				//document.getElementById('chooseFile').addEventListener('change', function() {
+				$('#chooseFile').on('change', function() {
 				    var file = this.files[0];
 				    var formData = new FormData();
 				    formData.append('upload', file);
 					var reader = new FileReader();
 				    reader.onload = function(e) {
-				      	document.getElementById('imagePreview').src = e.target.result;
-				      	// 이미지 변경 여부 체크
+				      	// document.getElementById('imagePreview').src = e.target.result;
+				    	$('#imagePreview').attr('src', e.target.result);
 				    }
 				    reader.readAsDataURL(this.files[0]);
 				    
 				    var form = new FormData();
 			        form.append( "upload", $("#chooseFile")[0].files[0] );
 			        
-			         jQuery.ajax({
+			         $.ajax({
 			             url : "/mainImage/upload"
 			           , type : "POST"
 			           , processData : false
@@ -130,9 +166,10 @@ form {
 			           , data : form
 			           , dataType: 'json'
 			           , success:function(response) {
-			               alert("성공하였습니다.");
+			               // alert("성공하였습니다.");
 			               console.log(response);
-			               document.getElementById('imageChanged').value = response.url;
+			               $('#imageChanged').val(response.url);
+			               // document.getElementById('imageChanged').value = response.url;
 			           }
 			           ,error: function (jqXHR) 
 			           { 
@@ -147,17 +184,17 @@ form {
 		<div class="title">
 			<h4>제목</h4>
 			<p>메인 페이지에 제목이기 때문에 강의를 대표할 수 있는 키워드를 사용해 제목을 입력해 주세요.<br>한글을 30자 이하, 영어는 40자 이하를 권장합니다.</p>
-			<input type="text" name="TITLE" class="title">
+			<input type="text" id="title" name="TITLE" class="title">
 			<button type="button" class="resetButton title">다시 작성</button>
 		</div>
 		<div class="context">
 			<h4>강의 소개</h4>
 			<p>강의에 대한 소개를 작성해주세요.</p>
-				<textarea id = "editor4" name = "CONTENT" class="context"></textarea>
+				<textarea id ="CONTENT" name = "CONTENT" class="context"></textarea>
 				<script src="https://ckeditor.com/apps/ckfinder/3.5.0/ckfinder.js"></script>
 			<script>		
 			ClassicEditor
-			.create(document.querySelector('#editor4'), {
+			.create(document.querySelector('#CONTENT'), {
 				ckfinder: {
 					uploadUrl : '/image/upload'
 				}
@@ -174,26 +211,28 @@ form {
 			<p>정상 가격과 할인된 금액을 입력해 주세요.</p>
 			<div>
 				<h3>정상 밤부</h3>
-				<input type="number" name="BAMBOO" class="bamboo" placeholder="1000"><p>밤부</p>
+				<input type="number" id="BAMBOO" name="BAMBOO" class="bamboo" placeholder="1000"><p>밤부</p>
 			</div>
 			<div>
 				<h3>할인 밤부</h3>
-				<input type="number" name="SALE_BAMBOO" class="bamboo" placeholder="900"><p>밤부</p>
+				<input type="number" id="SALE_BAMBOO" name="SALE_BAMBOO" class="bamboo" placeholder="900"><p>밤부</p>
 			</div>
 			<div>
 				<h3>할인율</h3>
-				<input type="text" name="discount_bamboo" class="bamboo" placeholder="10" readonly><p>%</p>
+				<input type="text" id="discount_bamboo" name="discount_bamboo" class="bamboo" placeholder="10" readonly><p>%</p>
 			</div>
 				<button type="button" class="resetButton bamboo">다시 작성</button>
 				<script>
 			    	// bamboo와 sale_bamboo 입력값이 변경될 때마다 할인율 계산
-			   		document.getElementsByName("BAMBOO")[0].addEventListener("input", calculateDiscount);
-			  		document.getElementsByName("SALE_BAMBOO")[0].addEventListener("input", calculateDiscount);
+			   		//document.getElementsByName("BAMBOO")[0].addEventListener("input", calculateDiscount);
+			   		$('#BAMBOO').on("input", calculateDiscount);
+			  		//document.getElementsByName("SALE_BAMBOO")[0].addEventListener("input", calculateDiscount);
+			   		$('#SALE_BAMBOO').on("input", calculateDiscount);
 			  
 					  function calculateDiscount() {
 					    // 입력된 값 가져오기
-					    var bambooPrice = document.getElementsByName("BAMBOO")[0].value;
-					    var saleBambooPrice = document.getElementsByName("SALE_BAMBOO")[0].value;
+					    var bambooPrice = $('#BAMBOO').val();
+					    var saleBambooPrice = $('#SALE_BAMBOO').val();
 					    
 					    // 할인율 계산
 					    var discountPercent = Math.round((bambooPrice - saleBambooPrice) / bambooPrice * 100);
@@ -202,7 +241,7 @@ form {
 					    }
 					    
 					    // 할인율 입력값에 할당
-					    document.getElementsByName("discount_bamboo")[0].value = discountPercent;
+					    $('#discount_bamboo').val(discountPercent);
 						}
 					  
 				</script>			
@@ -210,12 +249,13 @@ form {
 			<div class="summary">
 			<h4>요약 설명</h4>
 			<p>해당 강의에 대해 간단한 설명과 수강생들에게 왜 이 강의를 들어야 하는지 짧게 작성해주세요!</p>
-			<input type="text" name="SUMMARY" class="summary">
+			<input type="text" id="summary" name="SUMMARY" class="summary">
 			<button type="button" class="resetButton summary">다시 작성</button>
 			</div>
 		</div>	
 		<input type="submit" value="등록하기">
 		</form>
+		
 		<script>
 		// 모든 reset 버튼을 선택
 		const resetButtons = document.querySelectorAll('.resetButton');
